// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic TextEditor (not use sample data) add connected contents 1`] = `
"[~]
[?]<買> vs <賣>？ %000
[+]
[-]"
`;

exports[`Basic TextEditor (not use sample data) add connected contents 2`] = `
Array [
  Object {
    "commentId": 3,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "oauthor": undefined,
    "poll": true,
    "pollId": 10,
    "src": undefined,
    "stampId": "%000",
    "str": "<買> vs <賣>？",
  },
]
`;

exports[`Basic TextEditor (not use sample data) add stamps to inline value 1`] = `
"[~]
[?]<買> vs <賣>？ %000
[+]
[-]"
`;

exports[`Basic TextEditor (not use sample data) add stamps to inline value 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": "<買> vs <賣>？",
  },
]
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to a blank editor 1`] = `
"
[?]
<買> vs <賣>？ %000
"
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to a blank editor 2`] = `
Array [
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "<買> vs <賣>？ %000",
  },
]
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to an editxor with existed value 1`] = `
"[~]
[[生物技術]] %001
[?]<買> vs <賣>？ %000
[+]
@巴菲特2020Q4加倉 %003
@ARK開倉 %002
[-]
"
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to an editxor with existed value 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%001",
    "str": "[[生物技術]] %001",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": "<買> vs <賣>？ %000",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%002",
    "stampId": "%003",
    "str": "@巴菲特2020Q4加倉 %003",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%001",
    "stampId": "%002",
    "str": "@ARK開倉 %002",
  },
]
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to an editxor with existed value and connected contents 1`] = `
"[~]
[[生物技術]] %001
[?]<買> vs <賣>？ %000
[+]
[-]
"
`;

exports[`Basic TextEditor (not use sample data) insert markerlines to an editxor with existed value and connected contents 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%001",
    "str": "[[生物技術]] %001",
  },
  Object {
    "commentId": 3,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "oauthor": undefined,
    "poll": true,
    "pollId": 10,
    "src": undefined,
    "stampId": "%000",
    "str": "<買> vs <賣>？ %000",
  },
]
`;

exports[`Basic TextEditor (not use sample data) parse stamped inline value 1`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": true,
    "stream": Array [
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[~]",
            "length": 3,
            "linenumber": 0,
            "marker": Object {
              "key": "[~]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 0,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[?]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "alias": undefined,
            "content": Array [
              "<買> vs <賣>？",
              Object {
                "alias": undefined,
                "content": " %000",
                "length": 5,
                "linenumber": 1,
                "type": "stamp",
              },
            ],
            "length": 16,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
              "value": "<買> vs <賣>？",
            },
            "type": "inline-value",
          },
        ],
        "length": 19,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[+]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 2,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[-]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
    ],
    "ticker": undefined,
    "topic": undefined,
  },
]
`;

exports[`TextEditor use sample data attach markerlines to tokens 1`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": true,
    "stream": Array [
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[=]",
            "length": 3,
            "linenumber": 0,
            "marker": Object {
              "key": "[=]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 0,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[?]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "alias": undefined,
            "content": Array [
              "買 vs 賣？",
              Object {
                "alias": undefined,
                "content": " %000",
                "length": 5,
                "linenumber": 1,
                "markerline": Object {
                  "commentId": 3,
                  "linenumber": 1,
                  "marker": Object {
                    "key": "[?]",
                    "value": "買 vs 賣？",
                  },
                  "nestedCard": undefined,
                  "oauthor": "@oauthor",
                  "poll": true,
                  "pollId": 10,
                  "src": "a.source",
                  "stampId": "%000",
                  "str": "買 vs 賣？ %000",
                },
                "type": "stamp",
              },
            ],
            "length": 12,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
              "value": "買 vs 賣？",
            },
            "markerline": Object {
              "commentId": 3,
              "linenumber": 1,
              "marker": Object {
                "key": "[?]",
                "value": "買 vs 賣？",
              },
              "nestedCard": undefined,
              "oauthor": "@oauthor",
              "poll": true,
              "pollId": 10,
              "src": "a.source",
              "stampId": "%000",
              "str": "買 vs 賣？ %000",
            },
            "type": "inline-value",
          },
        ],
        "length": 15,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[+]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 2,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[-]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
      "
",
    ],
    "ticker": undefined,
    "topic": undefined,
  },
]
`;

exports[`TextEditor use sample data attach markerlines to tokens 2`] = `
Array [
  Object {
    "breaker": undefined,
    "nestedCard": undefined,
    "root": undefined,
    "stream": Array [],
    "ticker": undefined,
    "topic": undefined,
  },
  Object {
    "breaker": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$AAA",
    },
    "root": undefined,
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          Object {
            "alias": undefined,
            "content": "$AAA",
            "length": 4,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "
",
        ],
        "length": 5,
        "linenumber": 0,
        "type": "sect-ticker-begin-line",
      },
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[=]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[=]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[?]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "alias": undefined,
            "content": Array [
              "買 vs 賣？",
              Object {
                "alias": undefined,
                "content": " %000",
                "length": 5,
                "linenumber": 2,
                "markerline": Object {
                  "commentId": 3,
                  "linenumber": 2,
                  "marker": Object {
                    "key": "[?]",
                    "value": "買 vs 賣？",
                  },
                  "nestedCard": Object {
                    "oauthor": undefined,
                    "symbol": "$AAA",
                  },
                  "oauthor": "@oauthor",
                  "poll": true,
                  "pollId": 10,
                  "src": "a.source",
                  "stampId": "%000",
                  "str": "買 vs 賣？ %000",
                },
                "type": "stamp",
              },
            ],
            "length": 12,
            "linenumber": 2,
            "marker": Object {
              "key": "[?]",
              "value": "買 vs 賣？",
            },
            "markerline": Object {
              "commentId": 3,
              "linenumber": 2,
              "marker": Object {
                "key": "[?]",
                "value": "買 vs 賣？",
              },
              "nestedCard": Object {
                "oauthor": undefined,
                "symbol": "$AAA",
              },
              "oauthor": "@oauthor",
              "poll": true,
              "pollId": 10,
              "src": "a.source",
              "stampId": "%000",
              "str": "買 vs 賣？ %000",
            },
            "type": "inline-value",
          },
        ],
        "length": 15,
        "linenumber": 2,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[+]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
      "
",
      Object {
        "alias": undefined,
        "content": Array [
          Object {
            "alias": undefined,
            "content": "[-]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 4,
        "type": "inline-marker",
      },
      "
",
    ],
    "ticker": true,
    "topic": undefined,
  },
]
`;

exports[`TextEditor use sample data does basic edit 1`] = `
"
[?]<買> vs <賣>？ %100
[~] [[生物技術]] %000
[+]
@ARK開倉 %001
@巴菲特2020Q4加倉 %002
[-]"
`;

exports[`TextEditor use sample data does basic edit 2`] = `
Array [
  Object {
    "commentId": 3,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "oauthor": "@someauthor",
    "poll": true,
    "pollId": 10,
    "src": "some.source",
    "stampId": "%100",
    "str": "<買> vs <賣>？ %100",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.source",
    "stampId": "%000",
    "str": " [[生物技術]]",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.source",
    "stampId": "%001",
    "str": "@ARK開倉",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.source",
    "stampId": "%002",
    "str": "@巴菲特2020Q4加倉",
  },
]
`;

exports[`TextEditor use sample data edit text from previous stored text 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %000
[?] B@23-25 小倉位 %001
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %002
- 情報 %003
- 企業決策中心 %004
[+]
提供政府服務 %005
營收增長高 %006
利潤率進步 %007
[-]
至今10多年仍無法盈利 %008
需要商業化，不僅是做政府生意 %009

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %00a"
`;

exports[`TextEditor use sample data edit text from previous stored text 2`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 %000
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %001
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 %002
有炒股動力，@ARK、@WSB皆關注 %003
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 %004
很難做到像消費者級別的量，增長的想像空間不大 %005

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %006
太空商業化將帶來新的商業模式 %007"
`;

exports[`TextEditor use sample data generate markerline 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %000
[?] B@23-25 小倉位 %001
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %002
- 情報 %003
- 企業決策中心 %004
對象：各國政府，FBI、CIA、美軍等 %005
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %006
[+]
提供政府服務 %007
營收增長高 %008
利潤率進步 %009
現金充足，財務沒有問題 %00a
有炒股動力，@ARK、@WSB皆關注 %00b
[-]
至今10多年仍無法盈利 %00c
需要商業化，不僅是做政府生意 %00d
股權獎勵高，拉低盈利 %00e
很難做到像消費者級別的量，增長的想像空間不大 %00f"
`;

exports[`TextEditor use sample data generate markerline 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%000",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%001",
    "str": " B@23-25 小倉位",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%002",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[*]",
      "value": "- 情報",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%003",
    "str": "- 情報",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "key": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%004",
    "str": "- 企業決策中心",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%005",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%006",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%007",
    "str": "提供政府服務",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%008",
    "str": "營收增長高",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%009",
    "str": "利潤率進步",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00a",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00b",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "linenumber": 16,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00c",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00d",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00e",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00f",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
]
`;

exports[`TextEditor use sample data generate markerline 3`] = `
"$PLTR
[?] \\"预计该股票会有更大的波动性\\" #無幫助 %000
[*]
產品：3个软件平台 %001
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。 %002
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。 %003
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。 %004
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %005"
`;

exports[`TextEditor use sample data generate markerline 4`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%000",
    "str": " \\"预计该股票会有更大的波动性\\" #無幫助",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[*]",
      "value": "產品：3个软件平台",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%001",
    "str": "產品：3个软件平台",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[*]",
      "value": "- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%002",
    "str": "- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[*]",
      "value": "- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%003",
    "str": "- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "key": "[*]",
      "value": "- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%004",
    "str": "- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%005",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
  },
]
`;

exports[`TextEditor use sample data get nested markerlines 1`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$ABBV",
    },
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "stampId": "%000",
    "str": " [[生物技術]]",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$ABBV",
    },
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "stampId": "%001",
    "str": "@ARK開倉",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$ABBV",
    },
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "stampId": "%002",
    "str": "@巴菲特2020Q4加倉",
  },
]
`;

exports[`TextEditor use sample data get nested markerlines 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "[[生物技術]] %000",
  },
  Object {
    "commentId": 3,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "oauthor": "@someauthor",
    "poll": true,
    "pollId": 10,
    "src": "some.source",
    "stampId": "%100",
    "str": "<買> vs <賣>？ %100",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "srcStamp": "%002",
    "stampId": "%002",
    "str": "@巴菲特2020Q4加倉 %002",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "src": "some.src",
    "srcStamp": "%001",
    "stampId": "%001",
    "str": "@ARK開倉 %001",
  },
]
`;

exports[`TextEditor use sample data handle common cases 1`] = `
"[=]
[?]買 vs 賣？ %000
[+]
[-]"
`;

exports[`TextEditor use sample data handle common cases 2`] = `
"$AAA
[=]
[?]買 vs 賣？ %000
[+]
[-]

[[TOPIC]]
[=]
[?]買 vs 賣？ %001
[+]
[-]

$BBB
[=]
[?]買 vs 賣？ %002
[+]
[-]"
`;

exports[`TextEditor use sample data insert markerlines 1`] = `
"
[=]
[[大數據]] [[SaaS]] %000
[?]
\\"预计该股票会有更大的波动性\\" #無幫助 %000
B@23-25 小倉位 %001
[*]
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。 %004
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。 %003
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。 %002
產品：3个软件平台 %001
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %006
對象：各國政府，FBI、CIA、美軍等 %005
- 企業決策中心 %004
- 情報 %003
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %002
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %005
有炒股動力，@ARK、@WSB皆關注 %00b
現金充足，財務沒有問題 %00a
利潤率進步 %009
營收增長高 %008
提供政府服務 %007
[-]
很難做到像消費者級別的量，增長的想像空間不大 %00f
股權獎勵高，拉低盈利 %00e
需要商業化，不僅是做政府生意 %00d
至今10多年仍無法盈利 %00c

"
`;

exports[`TextEditor use sample data insert markerlines 2`] = `
Array [
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "[[大數據]] [[SaaS]] %000",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "\\"预计该股票会有更大的波动性\\" #無幫助 %000",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%001",
    "stampId": "%001",
    "str": "B@23-25 小倉位 %001",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%004",
    "stampId": "%004",
    "str": "- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。 %004",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%003",
    "stampId": "%003",
    "str": "- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。 %003",
  },
  Object {
    "linenumber": 9,
    "marker": Object {
      "key": "[*]",
      "value": "- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%002",
    "stampId": "%002",
    "str": "- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。 %002",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "key": "[*]",
      "value": "產品：3个软件平台",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%001",
    "stampId": "%001",
    "str": "產品：3个软件平台 %001",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%006",
    "stampId": "%006",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低 %006",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%005",
    "stampId": "%005",
    "str": "對象：各國政府，FBI、CIA、美軍等 %005",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "key": "[*]",
      "value": "- 企業決策中心",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%004",
    "stampId": "%004",
    "str": "- 企業決策中心 %004",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "key": "[*]",
      "value": "- 情報",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%003",
    "stampId": "%003",
    "str": "- 情報 %003",
  },
  Object {
    "linenumber": 15,
    "marker": Object {
      "key": "[*]",
      "value": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%002",
    "stampId": "%002",
    "str": "產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %002",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%005",
    "stampId": "%005",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\" %005",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00b",
    "stampId": "%00b",
    "str": "有炒股動力，@ARK、@WSB皆關注 %00b",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00a",
    "stampId": "%00a",
    "str": "現金充足，財務沒有問題 %00a",
  },
  Object {
    "linenumber": 20,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%009",
    "stampId": "%009",
    "str": "利潤率進步 %009",
  },
  Object {
    "linenumber": 21,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%008",
    "stampId": "%008",
    "str": "營收增長高 %008",
  },
  Object {
    "linenumber": 22,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%007",
    "stampId": "%007",
    "str": "提供政府服務 %007",
  },
  Object {
    "linenumber": 24,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00f",
    "stampId": "%00f",
    "str": "很難做到像消費者級別的量，增長的想像空間不大 %00f",
  },
  Object {
    "linenumber": 25,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00e",
    "stampId": "%00e",
    "str": "股權獎勵高，拉低盈利 %00e",
  },
  Object {
    "linenumber": 26,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00d",
    "stampId": "%00d",
    "str": "需要商業化，不僅是做政府生意 %00d",
  },
  Object {
    "linenumber": 27,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": undefined,
    "new": true,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00c",
    "stampId": "%00c",
    "str": "至今10多年仍無法盈利 %00c",
  },
]
`;

exports[`insertMarkerlinesToBody() insert markerline to existed marker-header 1`] = `
"[~]
[?] inline inline inline
[+]
insert insert insert %000
111 111
[-]
"
`;

exports[`insertMarkerlinesToBody() insert markerline to existed marker-header 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "inline inline inline",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " inline inline inline",
  },
  Object {
    "linenumber": -1,
    "marker": Object {
      "key": "[+]",
      "value": "insert insert insert",
    },
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": undefined,
    "stampId": "%000",
    "str": "insert insert insert",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "111 111",
  },
]
`;

exports[`updateMarkerlines() parse new added lines 1`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "a inline value",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " a inline value %000",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "111 111 %001",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": "222 222",
  },
  Object {
    "linenumber": 6,
    "marker": Object {
      "key": "[-]",
      "value": "333 333",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "333 333",
  },
]
`;

exports[`updateMarkerlines() parse swaped lines 1`] = `
Array [
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[+]",
      "value": "a line value",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "a line value %001",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[?]",
      "value": "a inline value",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " a inline value %000",
  },
]
`;

exports[`updateMarkerlines() parse text to markerlines 1`] = `
Array [
  Object {
    "inline": true,
    "linenumber": 0,
    "marker": Object {
      "key": "[~]",
    },
  },
  Object {
    "inline": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
    },
  },
  Object {
    "inline": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[+]",
    },
  },
  Object {
    "inline": true,
    "linenumber": 4,
    "marker": Object {
      "key": "[-]",
    },
  },
]
`;

exports[`updateMarkerlines() parse text to markerlines 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "a inline value",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%000",
    "str": " a inline value",
  },
  Object {
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "a line value",
    },
    "nestedCard": undefined,
    "new": true,
    "noStamp": true,
    "oauthor": undefined,
    "src": undefined,
    "stampId": "%001",
    "str": "a line value",
  },
]
`;
